--- a/src/gaussian_dist.ipynb
+++ b/src/gaussian_dist.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,12 +114,25 @@
     "        plt.title('Histogram of Data')\n",
     "        plt.xlabel('data')\n",
     "        plt.ylabel('count')\n",
-    "            "
+    "        \n",
+    "    def pdf(self, x):\n",
+    "        \"\"\"Probability density function calculator for the gaussian distribution.\n",
+    "        \n",
+    "        Args:\n",
+    "            x (float): point for calculating the probability density function\n",
+    "            \n",
+    "        \n",
+    "        Returns:\n",
+    "            float: probability density function output\n",
+    "        \"\"\"\n",
+    "        print((1.0 / (self.stdev * math.sqrt(2*math.pi))) * math.exp(-0.5*((x - self.mean) / self.stdev) ** 2))\n",
+    "\n",
+    "        return (1.0 / (self.stdev * math.sqrt(2*math.pi))) * math.exp(-0.5*((x - self.mean) / self.stdev) ** 2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -140,16 +153,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Gauss_one = Gaussian_dist()"
+    "Gauss_one = Gaussian_dist()\n",
+    "Gauss_two = Gaussian_dist(25,2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +172,7 @@
        "__main__.Gaussian_dist"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -216,6 +230,53 @@
     "print(round(Gauss_one.stdev,5))\n",
     "Gauss_one.plot_histogram()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pdf(self, x):\n",
+    "        \"\"\"Probability density function calculator for the gaussian distribution.\n",
+    "        \n",
+    "        Args:\n",
+    "            x (float): point for calculating the probability density function\n",
+    "            \n",
+    "        \n",
+    "        Returns:\n",
+    "            float: probability density function output\n",
+    "        \"\"\"\n",
+    "        print((1.0 / (self.stdev * math.sqrt(2*math.pi))) * math.exp(-0.5*((x - self.mean) / self.stdev) ** 2))\n",
+    "        return (1.0 / (self.stdev * math.sqrt(2*math.pi))) * math.exp(-0.5*((x - self.mean) / self.stdev) ** 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.19947114020071635\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.19947"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "round(Gauss_two.pdf(25),5)"
+   ]
   }
  ],
  "metadata": {
@@ -234,7 +295,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10 (default, Nov 14 2022, 12:59:47) \n[GCC 9.4.0]"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4,
   "vscode": {
